--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,10 @@ max-width: 1400px;
 margin: 0 auto;
 }
 .reg{
-    border: 1px solid rgb(190, 183, 183);
+    border: 1px solid rgb(170, 168, 168);
     width: 500px;
     height: 550px;
-    background-color: cadetblue;
+    background-color: #fff;
     border-radius: 5%;
     display: flex;
     margin: 0 auto;
@@ -17,34 +17,61 @@ margin: 0 auto;
 h1{
 font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 color: rgb(39, 38, 38);
-margin-left: 50px;
+margin-left: 65px;
 }
 
 #myForm{
 margin-top: 50px;
-margin-left: 90px;
+margin-left: 85px;
 }
 
-input{
-border: none;
-width: 308px;
-height: 53px;
-border-radius: 30px;
-background-color: #fff;
-}
+/* From Uiverse.io by alexruix */ 
+.input-group {
+    position: relative;
+   }
+   
+   .input {
+    width: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    border: solid 1.5px #9e9e9e;
+    border-radius: 1rem;
+    background: none;
+    padding: 1rem;
+    font-size: 1rem;
+    color: #696767;
+    transition: border 150ms cubic-bezier(0.4,0,0.2,1);
+   }
+   
+   .user-label {
+    position: absolute;
+    left: 15px;
+    color: #494848;
+    pointer-events: none;
+    transform: translateY(1rem);
+    transition: 150ms cubic-bezier(0.4,0,0.2,1);
+   }
+   
+   .input:focus, input:valid {
+    outline: none;
+    border: 1.5px solid #1a73e8;
+   }
+   
+   .input:focus ~ label, input:valid ~ label {
+    transform: translateY(-50%) scale(0.8);
+    background-color: white;
+    padding: 0 .2em;
+    color: #2196f3;
+   }
 
-.inputBorder{
-width: 400px;
-height: 59px;
-border-radius: 40%;
-margin-bottom: 20px;
+   .input-group{
+margin-top: 25px;
 }
 
 /* From Uiverse.io by NorthFishHasNa */ 
 button {
     display: inline-block;
     border-radius: 4px;
-    background-color: #3d405b;
+    background-color: #858588;
     border: none;
     color: #FFFFFF;
     text-align: center;
@@ -54,8 +81,8 @@ button {
     transition: all 0.5s;
     cursor: pointer;
     margin: 5px;
-    margin-left: 85px;
-    margin-top: 20px;
+    margin-left: 95px;
+    margin-top: 55px;
    }
    
    button span {
@@ -86,3 +113,10 @@ button {
 
 
 
+#ui{
+display: flex;
+flex-wrap: wrap;
+gap: 100px;
+border: 3px solid white;
+margin-top: 200px;
+}
